2014-06-25  Mario Lang  <mlang@delysid.org>

	* chess-pos.el (chess-pos-search*)
	* chess-input.el (chess-input-display-moves): cl-delete-duplicates ->
	delete-dups.

	* chess-pos.el (chess-pos-piece-p, chess-pos-search*)
	(chess-search-position)
	* chess-ply.el (chess-ply-create, chess-legal-plies)
	* chess-plain.el (chess-plain-piece-text)
	* chess-fen.el (chess-pos-to-fen)
	* chess-display.el (chess-display-select-piece)
	* chess-algebraic.el (chess-algebraic-to-ply): Use `=' instead of `eq'
	to compare pieces.

2014-06-24  Mario Lang  <mlang@delysid.org>

	* chess-ply.el (chess-ply-p): New function.
	Change `cl-assert' to `cl-check-type' based on this predicate.
	(chess-ply-final-p): Only call `chess-ply-any-keyword' if we actually
	found a preceding ply.
	(chess-ply--add): Remove obsolte and unused arguments RANK-ADJ and
	FILE-ADJ.
	(chess-legal-plies): Adjust for `chess-ply--add' argument removal.

2014-06-19  Eli Zaretskii  <eliz@gnu.org>

	* chess.texi: Proofread and fix the manual.  All the Next, Prev,
	Up pointers deleted.  Markup of 'nil' and other symbols fixed.
	Typos and British spellings fixed.

2014-06-16  Mario Lang  <mlang@delysid.org>

	* chess-input.el (chess-input-notation-type): New variable.
	(chess-input-test-move, chess-input-display-moves): Use it.
	(chess-input-shortcut): Generate initial ply list for numeric
	notation.

	* chess-ply.el (chess-legal-plies): Make :file keyword usable if :color
	is specified.

	* chess-input.el (chess-input-display-moves): Highlight valid target
	squares if `chess-display-highlight-legal' is non-nil.
	(chess-input-shortcut): Redraw board to remove highlights if a ply
	was submitted and `chess-display-highlight-legal' is non-nil.

	* chess-display.el (chess-display-move): Fix repainting when playing
	against the internal engine (AI) which runs off the `post-move' game
	event by adding a `redisplay' call just before the `post-move' emision.
	(chess-display-select-piece): Use `chess-display-draw-square'.