@@ -138,13 +138,12 @@ This regexp matches short, long and figurine notation.")
 			   (list (car candidates) target)
 			 (if (null source)
 			     (chess-error 'clarify-piece)
-			   (nconc changes (list :which source))
 			   (while candidates
 			     (if (if (>= source ?a)
 				     (eq (chess-index-file (car candidates))
 					 (- source ?a))
-				   (eq (chess-index-rank (car candidates))
-				       (- 7 (- source ?1))))
+				   (= (chess-index-rank (car candidates))
+				      (- 7 (- source ?1))))
 				 (setq which (car candidates)
 				       candidates nil)
 			       (setq candidates (cdr candidates))))
@@ -220,12 +219,9 @@ Finally, `:numeric' generates ICCF numeric notation (like \"2133\"."
 		    (setq rank (1+ rank)))
 		  (when (= (chess-index-file candidate) from-file)
 		    (setq file (1+ file))))
-		(cond
-		 ((= file 1)
-		  (setq differentiator (+ from-file ?a)))
-		 ((= rank 1)
-		  (setq differentiator (+ (- 7 from-rank) ?1)))
-		 (t (chess-error 'could-not-diff)))
+		(cond ((= file 1) (setq differentiator (+ from-file ?a)))
+		      ((= rank 1) (setq differentiator (+ (- 7 from-rank) ?1)))
+		      (t (chess-error 'could-not-diff)))
 		(chess-ply-set-keyword ply :which differentiator))))
 	  (concat
 	   (unless (= (upcase from-piece) ?P)
