@@ -1,3 +1,7 @@
+2014-06-29  Mario Lang  <mlang@delysid.org>
+
+	* chess-algebraic.el (chess-algebraic-to-ply): Remove dead code.
+
 2014-06-25  Mario Lang  <mlang@delysid.org>
 
 	* chess-pos.el (chess-pos-search*)
